Cherry-pick r266362. rdar://problem/70970398

WebGL goes in a bad state where glContext.createProgram() returns null
    https://bugs.webkit.org/show_bug.cgi?id=215844

    Patch by James Darpinian <jdarpinian@chromium.org> on 2020-08-31
    Reviewed by Kenneth Russell.

    Added test webgl/2.0.0/conformance/canvas/render-after-resize-test.html

    * platform/graphics/angle/GraphicsContextGLANGLE.cpp:
    (WebCore::GraphicsContextGLOpenGL::reshape):

    Canonical link: https://commits.webkit.org/228798@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266362 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/228499.289@safari-610-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610-branch@269316 268f45cc-cd09-0410-ab3c-d52691b4dbfc